[package]
name = "musync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
fxhash = "0.2.1"
sha2 = "0.10.8"
smol_str = "0.2.2"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.12", features = ["std", "xxh3"] }
